# paraketto

./: .gitignore  CMakeLists.txt  Makefile  README.md  blog.fp8.md  blog.md  build.sh  nocuda.md  pyproject.toml
docs/: metal-optimization.md
metal/: gemm.metal  kernels.metal
scripts/: build_engines.py  calibrate_v3_scales.py  export_weights.py  generate_fp8_weights.py  test_timestamps.py
src/: common.h  common_metal.h  conformer.cpp  conformer.h  conformer_fp8.cpp  conformer_fp8.h  conformer_metal.h  conformer_metal.mm  corrector.cpp  corrector.h  cubin_loader.h  cublas_gemm.cu  cuda_stubs.cpp  cutlass_cudaless.h  cutlass_gemm.cu  cutlass_gemm.h  cutlass_gemm_fp8.cu  cutlass_gemm_fp8.h  cutlass_params.cu  gemm.h  gpu.h  kernels.cu  kernels.h  kernels_fp8.cu  kernels_fp8.h  mel.h  mel_data.h  metal_context.h  metal_context.mm  metal_context_impl.h  metal_gemm.h  metal_gemm.mm  metal_kernels.h  metal_kernels.mm  model_defs.h  parakeet-transcribe.py  parakeet.cpp  parakeet_cuda.cpp  parakeet_trt.py  paraketto.cpp  (+9 more)
tests/: bench.py  bench_common.py  bench_corrector.py  bench_cpp.py  bench_cuda.py  bench_fp8_cutlass.cu  bench_fp8_tiles.cu  bench_metal_gemm.mm  bench_regression.py  bench_rtfx.py  test_cutlass_cudaless.cpp  test_fp8_2x.cu  test_kernels.cpp  test_metal_correctness.sh  test_metal_gemm.mm  test_metal_smoke.mm  test_transcribe.py  test_v3_multilingual.py
tests/golden/: 1089-134686-0000.txt  1188-133604-0002.txt  1221-135766-0001.txt  1580-141083-0000.txt  1995-1826-0002.txt  237-126133-0001.txt  2830-3979-0000.txt  2961-960-0002.txt  3729-6852-0001.txt  4446-2271-0000.txt  5105-28233-0001.txt  5683-32865-0000.txt  6829-68769-0001.txt  7127-75946-0000.txt  8230-279154-0001.txt  8463-287645-0000.txt
