[project]
name = "paraketto"
version = "0.1.0"
description = "Local voice dictation using Parakeet V2 — native CUDA/C++ inference"
requires-python = ">=3.10"
dependencies = [
    "soundfile",
    "numpy",
    "jiwer",
    "requests",
    "onnx",
    "datasets>=4.6.1",
    "torchcodec>=0.10.0",
    "whisper-normalizer>=0.1.12",
    "scipy>=1.15.3",
]

[dependency-groups]
dev = [
    "datasets>=4.6.1",
    "librosa>=0.11.0",
    "num2words>=0.5.14",
    "pyarrow>=23.0.1",
    "soundfile>=0.13.1",
]

