[project]
name = "paraketto"
version = "0.1.0"
description = "Local voice dictation using Parakeet V2 — native CUDA/C++ inference"
requires-python = ">=3.10"
dependencies = [
    "soundfile",
    "numpy",
    "jiwer",
    "requests",
    "onnx",
    "datasets>=4.6.1",
    # No PyPI wheels on Linux aarch64; optional for export/bench scripts on that platform.
    "torchcodec>=0.10.0; platform_machine != 'aarch64' or sys_platform != 'linux'",
    "whisper-normalizer>=0.1.12",
    "scipy>=1.15.3",
]

[dependency-groups]
dev = [
    "datasets>=4.6.1",
    "librosa>=0.11.0",
    "num2words>=0.5.14",
    "pyarrow>=23.0.1",
    "soundfile>=0.13.1",
]

